tests/negative/neg_string_concat_type_mismatch.safe
package neg_string_concat_type_mismatch

   function bad_concat returns integer
      var left : integer = 1
      var right : integer = 2
      var combined : integer = left & right

      return combined
